--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/JoinCODED/Task-Express-M1-Intro-Crud-Banks#readme",
   "dependencies": {
-    "express": "^4.17.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.3.1",
+    "morgan": "^1.10.0"
   }
 }
